--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,80 @@
-<!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Socially - Social Network</title>
+    <!-- CSS only -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-toast-plugin/1.3.2/jquery.toast.css" integrity="sha512-8D+M+7Y6jVsEa7RD6Kv/Z7EImSpNpQllgaEIQAtqHcI0H6F4iZknRj0Nx1DCdB+TwBaS+702BGWYC0Ze2hpExQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-toast-plugin/1.3.2/jquery.toast.min.js" integrity="sha512-zlWWyZq71UMApAjih4WkaRpikgY9Bz1oXIW5G0fED4vk14JjGlQ1UmkGM392jEULP8jbNMiwLWdM8Z87Hu88Fw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
 </head>
-<body>
+
+<!----------- COMMON NAVIGATION --------->
+<body id="body-pd">
+
+<!--Container Main start-->
+<div class="d-flex flex-column flex-shrink-0 bg-light vh-100" style="width: 100px; float: left;">
+    <ul class="nav nav-pills nav-flush flex-column mb-auto text-center" id="side-nav">
+        <li class="nav-item"> <a href="#" class="nav-link active py-3 border-bottom"> <i class="fa fa-home"></i> <small>Timeline</small> </a> </li>
+        <li> <a href="#" class="nav-link py-3 border-bottom"> <i class="fa fa-dashboard"></i> <small>Profile</small> </a> </li>
+        <li> <a href="#" class="nav-link py-3 border-bottom"> <i class="fa fa-first-order"></i> <small>Settings</small> </a> </li>
+        <li> <a href="#" class="nav-link py-3 border-bottom"> <i class="fa fa-cog"></i> <small>Connections</small> </a> </li>
+    </ul>
+    <div class="dropdown border-top"> <a href="{% url 'logout' %}" class="d-flex align-items-center justify-content-center p-3 link-dark text-decoration-none dropdown-toggle" id="dropdownUser3" data-bs-toggle="dropdown" aria-expanded="false">
+        <img src="https://github.com/mdo.png" alt="mdo" width="24" height="24" class="rounded-circle"> </a>
+        <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser3">
+            <li><a class="dropdown-item" href="#">New project...</a></li>
+            <li><a class="dropdown-item" href="#">Settings</a></li>
+            <li><a class="dropdown-item" href="#">Profile</a></li>
+            <li>
+                <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" href="{% url 'logout' %}">Sign out</a></li>
+        </ul>
+    </div>
+</div>
+
+<!--Container Main end-->
+{% block content %}
+
+{% endblock %}
 
 </body>
+
+<script>
+    $(".nav-link").click(function(){
+        // Find out which li is active
+        let activeLi = $("li .active")
+        $(activeLi).removeClass('active');
+        // adding active to the clicked li
+        $(this).addClass('active');
+    })
+
+    // Handling likes
+    $(".like").click(function () {
+        let postId = $(this).attr('data');
+        let el = $(this);
+        let url = `/like-post/${postId}/`
+        $.ajax({
+            url: url,
+            method: 'GET',
+            success: function(response){
+                $.toast({
+                    heading: "Information",
+                    text: response.message
+                });
+                $(el).html(response.link);
+            }
+        })
+    });
+
+</script>
+
+
 </html>
