--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block content %}
+
+    <div class="row" >
+        {% for post in all_posts %}
+            {% include 'components/card.html' with post=post likes=likes %}
+        {% endfor %}
+    </div>
+
+
+{% endblock %}
