--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
 
         </div>
         <div class="col-md-4">
-            <form method="post" class="form-signin" action="{% url 'login' %}">
+            <form method="post" class="form-signin" action="{% url 'timeline:login' %}">
                 {% csrf_token %}
                 <img class="mb-4" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
                 <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
